# demo-game-server

./: .gitignore  Cargo.toml  README.md  elm.json  response.md
frontend/: index.html
frontend/static/: main.js
setup/: config.toml  install.sql
src/: db.rs  dto.rs  main.rs  nim.rs  types.rs
templates/: index.askama
ui/: Main.elm
