[package]
name = "demo-game-server"
version = "0.1.0"
authors = ["Rolf Kreibaum", "Dorothea Müller"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-files = "0.1.4"
actix-http = "0.2.8"
actix-identity = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.5"
futures = "0.1.28"
r2d2 = "0.8.5"
r2d2_sqlite = "0.12.0"
pbkdf2 = "0.3.0"
toml = "0.5.1"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]