[package]
name = "demo-game-server"
version = "0.1.0"
authors = ["Rolf Kreibaum", "Dorothea Müller"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-files = "0.1.7"
actix-http = "0.2.11"
actix-identity = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.6"
futures = "0.1.29"
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
pbkdf2 = "0.3.0"
toml = "0.5"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]

[dependencies.askama]
version = "0.8.0"
features = ["serde-json"]